# rust-web-fullstack

./: .dockerignore  .env.example  .gitattributes  .gitignore  .woodpecker.yml  Cargo.toml  LICENSE  Makefile  README.md  SKILL.md  TEST_RESULTS.md  clippy.toml  docker-compose.yml  gateway.Dockerfile  i18n-demo.Dockerfile  live-search.Dockerfile
e2e-tests/: Cargo.toml
e2e-tests/scripts/: run-e2e-tests.sh
e2e-tests/src/: lib.rs
e2e-tests/tests/: common.rs  fixup_verification.rs  gateway_launcher_test.rs  gateway_test.rs  integration_test_template.rs  live_search_test.rs  sse_test.rs  test_infra.rs  unit_tests.rs
e2e-tests/tests/common/: chromium.rs  db.rs  gateway_env.rs  json.rs  live_search_env.rs  mod.rs
e2e-tests/tests/snapshots/: sse_test__sse_search_result_event.snap
gateway/: Cargo.toml
gateway/benches/: auth_bench.rs
gateway/migrations/: 001_create_refresh_tokens.up.sql
gateway/src/: auth.rs  gateway.rs  lib.rs  main.rs  module.rs  openapi.rs  otel.rs  pem.rs  settings.rs  sse.rs
gateway/src/auth/: error.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  store.rs
gateway/src/services/: mod.rs  monitor.rs  proxy.rs  search.rs
i18n-demo/: Cargo.toml  build.rs
i18n-demo/locales/: de.json  en.json
i18n-demo/src/: app.rs  i18n.rs  lib.rs  main.rs  styles.rs
i18n-demo/src/styles/: home.module.css
live-search/: Cargo.toml
live-search/benches/: db_bench.rs
live-search/migrations/: 001_create_search_results.down.sql  001_create_search_results.up.sql  002_add_url_unique_constraint.down.sql  002_add_url_unique_constraint.up.sql  003_add_trgm_index.down.sql  003_add_trgm_index.up.sql
live-search/src/: app.rs  bootstrap.rs  cache.rs  db.rs  error.rs  events.rs  lib.rs  main.rs  otel.rs  shutdown.rs  sse.rs  styles.module.css  styles.rs
references/: architecture-patterns.md  axum-patterns.md  leptos-patterns.md  postgres-patterns.md  testing-patterns.md
scripts/: init-db.sql  seed-db.sh  test-e2e.sh
