[workspace]
resolver = "2"
members = ["gateway", "live-search", "i18n-demo", "e2e-tests"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
# Edition 2024 requires Rust 1.85+. We pin to 1.94 in `rust-toolchain.toml`
# so all contributors build with the same toolchain (and wasm32 target).
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
console_error_panic_hook = "0.1.7"
futures = "0.3.32"
gloo-net = { version = "0.7.0", features = ["eventsource"] }
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
leptos = "0.8.20"
leptos_axum = "0.8.10"
leptos_i18n = "0.6"
leptos_meta = "0.8.6"
leptos_router = "0.8.14"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls", "json", "macros", "migrate", "chrono", "uuid"] }
subtle = "2.6"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tower = "0.5.3"
tower-http = "0.7.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.4", features = ["serde"] }
wasm-bindgen = "0.2.126"

[workspace.lints.rust]
unsafe_code = "deny"
rust_2024_compatibility = { level = "deny", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "allow"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
too_long_first_doc_paragraph = "allow"
nursery = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.dev.package."*"]
opt-level = 3
