[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2024"
publish = false

[lib]

# NOTE: `[lints] workspace = true` + pedantic override is not supported by Cargo
# (Cargo rejects mixing workspace = true with per-crate [lints.*] sections).
# We manually replicate the workspace lints with pedantic downgraded to warn
# for test code that is legitimately noisy under pedantic/nursery rules.
# clippy.toml handles unwrap_used/expect_used/panic exemptions for test code.
[lints.rust]
unsafe_code = "deny"
rust_2024_compatibility = { level = "deny", priority = -1 }
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = "warn"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
too_long_first_doc_paragraph = "allow"
nursery = { level = "warn", priority = -1 }

[features]
default = []
integration = []

[dependencies]

[dev-dependencies]
# default-features = false is fine — local CDP uses plain HTTP, no TLS needed
chromiumoxide = { version = "0.9.1", default-features = false, features = ["bytes"] }
tokio = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
# Used by common::setup / common::teardown to bound the chromiumoxide handler pump.
tokio-util = { workspace = true }
serde = { workspace = true }

# Test infrastructure
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
httpmock = { workspace = true }
mockall = { workspace = true }

# Snapshot testing & property-based testing
insta = { workspace = true, features = ["json"] }
proptest = { workspace = true }

# Import the real SearchResult type for proptest round-trip verification
live-search = { path = "../live-search" }

# Used directly by common::json for Uuid/DateTime proptest strategies
chrono = { workspace = true }
uuid = { workspace = true }
