[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2024"
publish = false

[lib]

# NOTE: `[lints] workspace = true` + pedantic override is not supported by Cargo
# (Cargo rejects mixing workspace = true with per-crate [lints.*] sections).
# We manually replicate the workspace lints with pedantic downgraded to warn
# for test code that is legitimately noisy under pedantic/nursery rules.
# clippy.toml handles unwrap_used/expect_used/panic exemptions for test code.
[lints.rust]
unsafe_code = "deny"
rust_2024_compatibility = { level = "deny", priority = -1 }
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = "warn"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
too_long_first_doc_paragraph = "allow"
nursery = { level = "warn", priority = -1 }

[features]
default = []
# Browser-based tests (chromiumoxide) — gated because they require a real
# browser installation.  Run with `--features browser-tests`.
browser-tests = []

[dependencies]

[dev-dependencies]
# default-features = false is fine — local CDP uses plain HTTP, no TLS needed
chromiumoxide = { version = "0.9.1", default-features = false, features = ["bytes"] }
tokio = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
# Used by common::setup / common::teardown to bound the chromiumoxide handler pump.
tokio-util = { workspace = true }
serde = { workspace = true }

# Leptos + axum for in-process server function routing
leptos = { workspace = true }
leptos_axum = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }

# tower-http for optional static file serving (Leptos build artifacts)
tower-http = { workspace = true, features = ["fs"] }

# tracing for subscriber init in live_search_env
tracing = { workspace = true }

# Test infrastructure
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

# Snapshot testing & property-based testing
insta = { workspace = true, features = ["json"] }
proptest = { workspace = true }

# Import the real SearchResult type and SSR modules for in-process server
live-search = { path = "../live-search", features = ["ssr"] }

# Gateway example for in-process HTTP tests
gateway-example = { path = "../gateway" }

# Used directly by common::json for Uuid/DateTime proptest strategies
chrono = { workspace = true }
uuid = { workspace = true }
