[package]
name = "live-search"
version = "0.1.0"
edition = "2024"
# sqlx-data.json was removed — the project uses runtime query_as only.
# Compile-time query checking requires `cargo sqlx prepare`.

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "live-search"
path = "src/main.rs"
required-features = ["ssr"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
leptos_axum = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower-http = { workspace = true, features = ["trace", "fs"] }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }
gloo-net = { workspace = true }
gloo-timers = { version = "0.4", features = ["futures"] }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }

[features]
default = []
ssr = ["dep:leptos_axum", "leptos/ssr"]
hydrate = ["leptos/hydrate"]
